Fixing height image on smaller screen sizes.

--- a/css/novak-north.webflow.css
+++ b/css/novak-north.webflow.css
@@ -85,7 +85,6 @@ blockquote {
 
 .project-image {
   border-radius: 25px;
-  height: 100%;
 }
 
 .navbar-container {
